[package]
name = "eash"
version = "0.0.1"
edition = "2021"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[worksoace]
members = [
    "crates/*"
]

[dependencies]
es-parser={version="0.0.1",path="./crates/es-parser"}
es-terminal={version="0.0.1",path="./crates/es-terminal"}
es-manifest={version="0.0.1",path="./crates/es-manifest"}
es-engine={version="0.0.1",path="./crates/es-engine"}


libc = "0.2.138"

[[bin]]
name = "eash"